[package]
name = "zep-kvs"
description = "Elementary zero config cross platform key-value persistence library"
keywords = ["kvs", "key", "value", "store", "state"]
repository = "https://github.com/espeer/zep-kvs"
categories = ["config", "filesystem", "os"]
authors = [ "Edwin Peer <espeer@gmail.com>" ]
license = "BSD-2-Clause"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
thiserror = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[build-dependencies]
cargo = "0.86"
